fix(styles): Ensures dark mode RadioCardGroup selected icon meets contrast requirements
Closes #778

--- a/packages/styles/radio-card.css
+++ b/packages/styles/radio-card.css
@@ -43,9 +43,9 @@
   min-height: 44px;
 }
 .RadioCardGroup__Icon.Icon svg {
-  /** 
+  /**
    * this is edge case to pass color-contrast when the radio-card is selected,
-   * it is not a color we want to live in cauldron as a variable 
+   * it is not a color we want to live in cauldron as a variable
    * @see https://github.com/dequelabs/cauldron/pull/736
    */
   color: #4f990f;
@@ -87,4 +87,8 @@
   margin-top: var(--space-small);
   display: flex;
   justify-content: center;
+}
+
+.cauldron--theme-dark .RadioCardGroup__Icon.Icon svg {
+  color: var(--accent-success);
 }
